Fixed flex wrap issue on firefox

--- a/styles/post.css
+++ b/styles/post.css
@@ -21,7 +21,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	flex-wrap: wrap;
 }
 
 .nav {
